complete naive post order
